have add OWNER PASWWORD fro tebi io
